# ml-starter

./: .gitignore  LICENSE  README.md  cliff.toml  pyproject.toml
app/: gradio_app.py  streamlit_app.py
src/: cli.py  data.py  evaluate.py  metrics.py  model.py  plot.py  predict.py  train.py  utils.py
